# mysite

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  compose.deploy.yaml  compose.yaml
.github/workflows/: ci.yaml  deploy.yaml
deploy/: Caddyfile
deploy/proxy/: compose.yaml
scripts/: smoke-test.sh  verify.sh
src/: db.rs  main.rs  models.rs  render.rs  routes.rs  security.rs  template.rs  uploads.rs  utils.rs
static/: editor.js  style.css  theme.js
templates/: error.html  layout.html
templates/admin/: dashboard.html  home_form.html  image_card.html  image_library.html  login.html  login_error.html  message_row.html  messages.html  project_form.html  project_row.html  settings.html  settings_link.html
templates/public/: contact.html  contact_thanks.html  project_card.html  project_detail.html  project_list.html
